--- a/plugin.xml
+++ b/plugin.xml
@@ -80,7 +80,7 @@
     </config-file>
 
     <config-file target="AndroidManifest.xml" parent="/*">
-      <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+      <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" android:maxSdkVersion="32" />
     </config-file>
 
     <config-file target="AndroidManifest.xml" parent="/manifest/application">
